footer contact info alignment fix

--- a/components/footer/style.scss
+++ b/components/footer/style.scss
@@ -31,6 +31,7 @@
   }
   .contact-info-label {
     @include flexbox(row);
+    align-items: center;
     justify-content: center;
     & > :first-child {
       margin-right: 10px;
